--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,7 +10,7 @@ html {
 body {
   background: linear-gradient(0deg, black, red);
   width: 90vw;
-  text-align:justify;
+  text-align: justify;
   margin-left: auto;
   margin-right: auto;
   padding: 0 !important;
@@ -19,23 +19,24 @@ body {
 }
 
 .menu {
-    display: inline-block;
-    padding-left: 5vw;
-    padding-right: 5vw;
-    position: fixed;
-    text-align: center;
-    overflow: hidden;
-    top: 0px;
-    left: 0px;
-    margin-left: -5vw;
+  display: inline-block;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  position: fixed;
+  text-align: center;
+  overflow: hidden;
+  top: 0px;
+  left: 0px;
+  margin-left: -5vw;
 }
+
 .menu a {
-    float: left;
-    color: red;
-    text-align: center;
-    text-decoration: none;
-    font-size: 2vw;
-    font-family: sans-serif;
+  float: left;
+  color: red;
+  text-align: center;
+  text-decoration: none;
+  font-size: 2vw;
+  font-family: sans-serif;
 }
 
 h1 {
@@ -44,90 +45,113 @@ h1 {
   font-size: 9vw;
   margin: 0;
 }
+
 h2 {
   font-size: 5vw;
 }
+
 h3 {
   font-family: sans-serif;
   text-align: center;
   font-size: 4.5vw;
   margin: 0;
 }
+
 h4 {
   font-family: sans-serif;
   font-size: 4vw;
   font-weight: normal;
 }
+
 p {
   font-family: sans-serif;
   font-size: 3vw;
 }
 
 img {
-    text-align: center;
-    width: 60vw;
-    display: block;
-    margin: auto;
+  text-align: center;
+  width: 60vw;
+  display: block;
+  margin: auto;
 }
 
 .hammerandsickle {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 20vw;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20vw;
 }
 
 .dems {
-    width: 30%;
-    float: right;
+  width: 30%;
+  float: right;
 }
 
 figcaption {
-    display: block;
-    font-family: sans-serif;
-    font-size: 2vw;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  font-family: sans-serif;
+  font-size: 2vw;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul {
-    font-family: sans-serif;
-    text-align:left;
-    list-style-type: square;
-    font-size: 3vw;
+  font-family: sans-serif;
+  text-align: left;
+  list-style-type: square;
+  font-size: 3vw;
 }
 
 ol {
-    font-family: sans-serif;
-    font-size: 3vw;
+  font-family: sans-serif;
+  font-size: 3vw;
 }
 
 li {
-    padding-bottom: 1em;
+  padding-bottom: 1em;
 }
 
 form {
-    font-family: sans-serif;
-    font-size: 3vw;
+  font-family: sans-serif;
+  font-size: 3vw;
 }
 
 input {
-    font-size: 3vw;
-    width: 100%;
+  font-size: 3vw;
+  width: 100%;
 }
 
 input:focus {
-    background-color: lightblue;
+  background-color: lightblue;
 }
 
 input[type=button], input[type=submit] {
-    font-size: 5vw;
-    border: 2px solid black;
-    cursor: pointer;
+  font-size: 5vw;
+  border: 2px solid black;
+  cursor: pointer;
 }
 
-a:link    {color:blue; background-color:transparent; text-decoration:none}
-a:visited {color:blue; background-color:transparent; text-decoration:none}
-a:hover   {color:blue; background-color:yellow; text-decoration:underline}
-a:active  {color:blue; background-color:transparent; text-decoration:underline}
+a:link {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none
+}
+
+a:visited {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none
+}
+
+a:hover {
+  color: blue;
+  background-color: yellow;
+  text-decoration: underline
+}
+
+a:active {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline
+}
