--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -42,35 +42,35 @@ body {
 h1 {
   text-align: center;
   text-decoration: underline;
-  font-size: 9vw;
+  font-size: 6vw;
   margin: 0;
 }
 
 h2 {
-  font-size: 5vw;
+  font-size: 4vw;
 }
 
 h3 {
   font-family: sans-serif;
   text-align: center;
-  font-size: 4.5vw;
+  font-size: 3vw;
   margin: 0;
 }
 
 h4 {
   font-family: sans-serif;
-  font-size: 4vw;
+  font-size: 2.5vw;
   font-weight: normal;
 }
 
 p {
   font-family: sans-serif;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 img {
   text-align: center;
-  width: 60vw;
+  width: 40vw;
   display: block;
   margin: auto;
 }
@@ -100,25 +100,25 @@ ul {
   font-family: sans-serif;
   text-align: left;
   list-style-type: square;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 ol {
   font-family: sans-serif;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 li {
-  padding-bottom: 1em;
+  padding-bottom: 2vw;
 }
 
 form {
   font-family: sans-serif;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 input {
-  font-size: 3vw;
+  font-size: 2vw;
   width: 100%;
 }
 
@@ -127,7 +127,7 @@ input:focus {
 }
 
 input[type=button], input[type=submit] {
-  font-size: 5vw;
+  font-size: 3vw;
   border: 2px solid black;
   cursor: pointer;
 }
