--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,13 @@
 html {
   width: auto;
+  font-size: 2vw;
+}
+
+@media (max-width: 500px) {
+  html {
+    width: auto;
+    font-size: 4vw;
+  }
 }
 
 @font-face {
@@ -35,37 +43,35 @@ body {
   color: red;
   text-align: center;
   text-decoration: none;
-  font-size: 2vw;
   font-family: sans-serif;
 }
 
 h1 {
   text-align: center;
   text-decoration: underline;
-  font-size: 6vw;
+  font-size: 3em;
   margin: 0;
 }
 
 h2 {
-  font-size: 4vw;
+  font-size: 2em;
 }
 
 h3 {
   font-family: sans-serif;
   text-align: center;
-  font-size: 3vw;
+  font-size: 1.5em;
   margin: 0;
 }
 
 h4 {
   font-family: sans-serif;
-  font-size: 2.5vw;
+  font-size: 1.2em;
   font-weight: normal;
 }
 
 p {
   font-family: sans-serif;
-  font-size: 2vw;
 }
 
 img {
@@ -90,7 +96,6 @@ img {
 figcaption {
   display: block;
   font-family: sans-serif;
-  font-size: 2vw;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -100,12 +105,10 @@ ul {
   font-family: sans-serif;
   text-align: left;
   list-style-type: square;
-  font-size: 2vw;
 }
 
 ol {
   font-family: sans-serif;
-  font-size: 2vw;
 }
 
 li {
@@ -114,11 +117,9 @@ li {
 
 form {
   font-family: sans-serif;
-  font-size: 2vw;
 }
 
 input {
-  font-size: 2vw;
   width: 100%;
 }
 
@@ -127,7 +128,7 @@ input:focus {
 }
 
 input[type=button], input[type=submit] {
-  font-size: 3vw;
+  font-size: 1.2em;
   border: 2px solid black;
   cursor: pointer;
 }
