--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,33 +1,33 @@
 html {
-  width: auto;
-  font-size: 2vw;
-  margin: 0;
-  padding: 0;
+    width: auto;
+    font-size: 2vw;
+    margin: 0;
+    padding: 0;
 }
 
 @media (max-width: 500px) {
-  html {
-    width: auto;
-    font-size: 4vw;
-  }
+    html {
+        width: auto;
+        font-size: 4vw;
+    }
 }
 
 @font-face {
-  font-family: "Lucida Calligraphy";
-  src: url("stylesheets/fonts/Lucida-Calligraphy.ttf");
+    font-family: "Lucida Calligraphy";
+    src: url("stylesheets/fonts/Lucida-Calligraphy.ttf");
 }
 
 body {
-  background: linear-gradient(0deg, black, red);
-  text-align: justify;
-  padding: 0;
-  margin: 0;
-  color: yellow;
-  font-family: "Lucida Calligraphy", serif;
+    text-align: justify;
+    padding: 0;
+    margin: 0;
+    font-family: "Lucida Calligraphy", serif;
 }
 
 #introduction {
+    background-color: red;
     display: flex;
+    color: yellow;
     flex-direction: row;
     flex-wrap: wrap;
     height: 100vh;
@@ -57,130 +57,134 @@ body {
 }
 
 .menu {
-    display: none;
+    display: flex;
     padding-left: 5vw;
     padding-right: 5vw;
     position: fixed;
     text-align: center;
     overflow: hidden;
-  top: 0px;
-  left: 0px;
-  margin-left: -5vw;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    margin-left: -5vw;
+    background-color: #222;
+    z-index: 2;
 }
 
-.menu a {
-  float: left;
-  color: red;
-  text-align: center;
-  text-decoration: none;
-  font-family: sans-serif;
+.menu > a {
+    float: left;
+    color: red;
+    padding: 0.5vw;
+    text-align: center;
+    text-decoration: none;
+    font-family: sans-serif;
 }
 
 h1 {
-  text-align: center;
-  font-size: 3em;
-  margin: 0;
+    text-align: center;
+    font-size: 3em;
+    margin: 0;
 }
 
 h2 {
-  font-size: 2em;
+    font-size: 2em;
 }
 
 h3 {
-  font-family: sans-serif;
-  text-align: center;
-  font-size: 1.5em;
-  margin: 0;
+    font-family: sans-serif;
+    text-align: center;
+    font-size: 1.5em;
+    margin: 0;
 }
 
 h4 {
-  font-family: sans-serif;
-  font-size: 1.2em;
-  font-weight: normal;
+    font-family: sans-serif;
+    font-size: 1.2em;
+    font-weight: normal;
 }
 
 p {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 img {
-  text-align: center;
-  width: 40vw;
-  display: block;
-  margin: auto;
+    text-align: center;
+    width: 40vw;
+    display: block;
+    margin: auto;
 }
 
 .hammerandsickle {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20vw;
 }
 
 .dems {
-  width: 30%;
-  float: right;
-  padding-left: 2vw;
+    width: 30%;
+    float: right;
+    padding-left: 2vw;
 }
 
 figcaption {
-  display: block;
-  font-family: sans-serif;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+    display: block;
+    font-family: sans-serif;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 ul {
-  font-family: sans-serif;
-  text-align: left;
-  list-style-type: square;
+    font-family: sans-serif;
+    text-align: left;
+    list-style-type: square;
 }
 
 ol {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 li {
-  padding-bottom: 2vw;
+    padding-bottom: 2vw;
 }
 
 form {
-  font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 input {
-  width: 100%;
-  font-size: 1em;
+    width: 100%;
+    font-size: 1em;
 }
 
 input:focus {
-  background-color: lightblue;
+    background-color: lightblue;
 }
 
 input[type=button], input[type=submit] {
-  font-size: 1.2em;
-  border: 2px solid black;
-  cursor: pointer;
+    font-size: 1.2em;
+    border: 2px solid black;
+    cursor: pointer;
 }
 
 a:link {
-  background-color: transparent;
-  text-decoration: none
+    background-color: transparent;
+    text-decoration: none
 }
 
 a:visited {
-  background-color: transparent;
-  text-decoration: none
+    background-color: transparent;
+    text-decoration: none
 }
 
 a:hover {
-  background-color: rgba(0,0,0,0.1);
-  text-decoration: underline
+    background-color: rgba(0,0,0,0.1);
+    text-decoration: underline
 }
 
 a:active {
-  color: blue;
-  background-color: transparent;
-  text-decoration: underline
+    color: blue;
+    background-color: transparent;
+    text-decoration: underline
 }
