--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -21,6 +21,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: serif;
+    background-color: #ffdead;
 }
 
 #introduction {
@@ -179,8 +180,6 @@ input[type=button], input[type=submit] {
 
 footer {
     display: flex;
-    background-color: black;
-    color: yellow;
     align-items: center;
 }
 
