added map, cleaned up html

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -166,6 +166,7 @@ form {
 input {
     width: 100%;
     font-size: 1em;
+    margin-bottom: 0.5em;
 }
 
 input:focus {
@@ -178,7 +179,16 @@ input[type=button], input[type=submit] {
     cursor: pointer;
 }
 
-footer {
+footer > .twitter {
+    margin-right: 0.2em;
+}
+
+footer > .email {
+    margin-left: 0.2em;
+}
+
+footer > .map {
+    padding: 1em 0 1em 0;
 }
 
 a:link {
