--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -20,8 +20,12 @@ body {
     flex-direction: column;
     padding: 0;
     margin: 0;
-    font-family: serif;
-    background-color: #ffdead;
+    font-family: 'Open Sans', sans-serif;
+}
+
+section {
+    width: 100%;
+    margin-bottom: 8vh;
 }
 
 #introduction {
@@ -30,10 +34,9 @@ body {
     color: yellow;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 95vh;
-    width: 100vw;
-    margin-bottom: 5vh;
+    height: 35vh;
     align-items: center;
+    margin-bottom: 0;
 }
 
 #introduction > div {
@@ -44,25 +47,39 @@ body {
     flex-direction: column;
 }
 
-#introduction > figure {
-    flex: 1 0;
-    margin: 0;
-}
-
 #introduction > div > nav {
     padding: 1vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center
 }
 
 #introduction > div > nav > a {
     color: yellow;
-    padding: 0.5vw;
+    padding: 0.5vw 2vw;
+    text-transform: uppercase;
 }
 
 #points {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80vw;
+    padding: 10vw;
+}
+
+#about > div {
+    display: flex;
+    flex-direction: row;
+}
+
+#about > div > .map {
+    flex: 1 0 50%;
+}
+
+#about > div > p {
+    flex: 1 0 50%;
+    padding: 0 5vw;
 }
 
 .menu {
@@ -86,7 +103,6 @@ body {
     padding: 0.5vw;
     text-align: center;
     text-decoration: none;
-    font-family: sans-serif;
 }
 
 h1 {
@@ -97,30 +113,29 @@ h1 {
 
 h2 {
     font-size: 2em;
+    text-align: center;
 }
 
 h3 {
-    font-family: sans-serif;
     text-align: center;
     font-size: 1.5em;
     margin: 0;
 }
 
 h4 {
-    font-family: sans-serif;
     font-size: 1.2em;
     font-weight: normal;
 }
 
 p {
-    font-family: sans-serif;
 }
 
 img {
     text-align: center;
-    width: 40vw;
     display: block;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    min-width: 200px;
 }
 
 .hammerandsickle {
@@ -136,22 +151,60 @@ img {
     padding-left: 2vw;
 }
 
-figcaption {
+.captioned {
+    position: relative;
+}
+
+.captioned > span {
+    position: absolute;
     display: block;
-    font-family: sans-serif;
+    right: 0.5vw;
+    bottom: 0.5vw;
+    color: white;
+}
+
+.map.captioned > span {
+    color: black;
+}
+
+figure {
+    flex: 1 0 33%;
+    margin: 0;
+}
+
+#art {
+    display: flex;
+    flex-direction: row;
+}
+
+.captioned > span.active {
+    display: none;
+}
+
+.captioned > figcaption {
+    display: none;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
 
+.captioned > figcaption.active {
+    display: block;
+    position: absolute;
+    padding: 0.5vw;
+    background: rgba(22,22,22,0.3);
+    bottom: 0;
+    width: 100%;
+    color: white;
+    font-size: 0.75em;
+}
+
 ul {
-    font-family: sans-serif;
     text-align: left;
     list-style-type: square;
 }
 
 ol {
-    font-family: sans-serif;
 }
 
 li {
@@ -159,7 +212,6 @@ li {
 }
 
 form {
-    font-family: sans-serif;
     width: 85%;
 }
 
@@ -187,10 +239,6 @@ footer > .email {
     margin-left: 0.2em;
 }
 
-footer > .map {
-    padding: 1em 0 1em 0;
-}
-
 a:link {
     background-color: transparent;
     text-decoration: none
@@ -207,9 +255,7 @@ a:hover {
 }
 
 a:active {
-    color: blue;
     background-color: transparent;
-    text-decoration: underline
 }
 
 @media only screen
@@ -219,21 +265,21 @@ and (max-device-width: 500px) {
         font-size: 4vw;
     }
 
+    #art {
+        flex-direction: column;
+    }
+
     .menu a {
         padding: 2vw;
         font-size: 8vw;
     }
 
     .mobile-hide {
-        display: none;
+        display: none !important;
     }
 
     .mobile-show {
         display: block;
         margin-left: auto;
-    }
-
-    img {
-        width: unset;
     }
 }
